xidlc/tests/invalid/http_unary_conflicting_param_source.idl
#progma xidlc package xidlc
#progma xidlc version v1.0.0

interface InvalidUnaryBindingService {
    @get(path = "/users/{id}")
    string get_user(
        @path("id") @query("user_id") string id
    );
};
